<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="notification_enabled"
        android:title="@string/pref_title_notifications" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notification_enabled"
        android:key="sound_enabled"
        android:title="@string/pref_title_sound" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notification_enabled"
        android:key="vibration_enabled"
        android:title="@string/pref_title_vibrate" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="toast_enabled"
        android:title="@string/pref_title_toasts" />

</PreferenceScreen>
