<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loggingfb"
        android:layout_alignParentTop="true"

        android:layout_alignStart="@+id/settingsfb"
        tools:layout_height="wrap_content">

        <TextView
            android:id="@+id/ste1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/l1" />

        <TextView
            android:id="@+id/ste2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste1"
            android:layout_below="@+id/ste1"
            android:layout_marginTop="10dp"
            android:text="@string/l2" />

        <TextView
            android:id="@+id/ste3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste2"
            android:layout_below="@+id/ste2"
            android:layout_marginTop="10dp"
            android:text="@string/l3" />

        <TextView
            android:id="@+id/ste4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste3"
            android:layout_below="@+id/ste3"
            android:layout_marginTop="10dp"
            android:text="@string/l4" />


        <Button
            android:id="@+id/see_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste4"
            android:layout_below="@+id/ste4"
            android:layout_marginTop="10dp"
            android:onClick="openSteps"
            android:text="@string/if_huawei_button"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste3"
            android:layout_below="@+id/see_steps"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/description"
            android:textAlignment="textStart" />


        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste3"
            android:layout_below="@+id/description"
            android:layout_marginTop="10dp"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/contacts"
            android:text="@string/email" />

        <TextView
            android:id="@+id/messenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/email"
            android:text="@string/messenger" />

        <TextView
            android:id="@+id/source_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste3"
            android:layout_below="@+id/messenger"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:text="@string/source_code"
            tools:textSize="10sp" />

        <TextView
            android:id="@+id/windows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ste3"
            android:layout_below="@+id/source_code"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:text="@string/wearetrying"
            tools:textSize="10sp" />


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/settingsfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/settingsfb"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_settings_black_24dp"
        app:backgroundTint="@android:color/background_light"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:fabSize="mini" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/webmailfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lmsfb"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/lmsfb"
        android:src="@drawable/webmail_icon"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap"
        android:backgroundTint="@color/webmail_colour"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/lmsfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/moodlefb"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/moodlefb"
        android:src="@drawable/lms_icon"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap"
        android:backgroundTint="@color/lms_colour"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/moodlefb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loggingfb"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/loggingfb"
        android:src="@drawable/moodle_icon"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/loggingfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/settingsfb"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_vpn_key_black_24dp"
        app:backgroundTint="@color/yellow"
        app:borderWidth="0dp"
        app:elevation="8dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>