<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lk.cse13.www.uomwireless.HuaweiStepsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/if_huawei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/if_huawei"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/pt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/if_huawei"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/pastep1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ps1"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pt1"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/pa1" />

        <TextView
            android:id="@+id/pt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ps1"
            android:layout_marginTop="40dp"
            android:text="@string/pastep2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ps2"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ps1"
            android:layout_alignStart="@+id/ps1"
            android:layout_below="@+id/pt2"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/pa2" />

        <TextView
            android:id="@+id/pt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ps2"
            android:layout_marginTop="40dp"
            android:text="@string/pastep3"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ps3"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ps1"
            android:layout_alignStart="@+id/ps1"
            android:layout_below="@+id/pt3"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/pa3" />

        <TextView
            android:id="@+id/pt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ps3"
            android:layout_marginTop="40dp"
            android:text="@string/pastep4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ps4"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ps1"
            android:layout_alignStart="@+id/ps1"
            android:layout_below="@+id/pt4"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/pa4" />


        <TextView
            android:id="@+id/if_huawei_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ps4"
            android:layout_margin="@dimen/text_margin"
            android:paddingTop="50dp"
            android:text="@string/if_huawei_old"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/st1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/if_huawei_old"
            android:text="@string/step1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss1"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/st1"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss1" />

        <TextView
            android:id="@+id/st2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss1"
            android:layout_marginTop="40dp"
            android:text="@string/step2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss2"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st2"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss2" />

        <TextView
            android:id="@+id/st3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss2"
            android:layout_marginTop="40dp"
            android:text="@string/step3"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss3"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st3"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss3" />

        <TextView
            android:id="@+id/st4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss3"
            android:layout_marginTop="40dp"
            android:text="@string/step4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss4"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st4"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss4" />

        <TextView
            android:id="@+id/st5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss4"
            android:layout_marginTop="40dp"
            android:text="@string/step5"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss5"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st5"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss5" />

        <TextView
            android:id="@+id/st6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss5"
            android:layout_marginTop="40dp"
            android:text="@string/step6"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss6"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st6"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss6" />

        <TextView
            android:id="@+id/st7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pt1"
            android:layout_alignStart="@+id/pt1"
            android:layout_below="@+id/ss6"
            android:layout_marginTop="40dp"
            android:text="@string/step7"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ss7"
            android:layout_width="@dimen/image_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ss1"
            android:layout_alignStart="@+id/ss1"
            android:layout_below="@+id/st7"
            android:adjustViewBounds="true"
            android:background="#000000"
            android:padding="1dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ss7" />


        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ss7"
            android:layout_margin="@dimen/text_margin"
            android:paddingTop="30dp"
            android:text="@string/done"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
